camerax: move camerax related code to own subdirectory, add camera/common
Change-Id: Ib3e1abf5eba76461ed3b9aa6004d4de4fd063a6d
Signed-off-by: Alexander Martinz <amartinz@shiftphones.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,8 @@
-rootProject.name='CameraX-Extensions'
+include ':camera-common'
+project(':camera-common').projectDir = new File(rootDir, 'camera/common')
+
 include ':camerax-extensions'
-include ':sample'
+project(':camerax-extensions').projectDir = new File(rootDir, 'camerax/extensions/')
+
+include ':camerax-extensions-sample'
+project(':camerax-extensions-sample').projectDir = new File(rootDir, 'camerax/sample/')
