--- a/camerax/extensions/build.gradle
+++ b/camerax/extensions/build.gradle
@@ -1,14 +1,15 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 29
 
     defaultConfig {
-        applicationId "com.shift.camera.extensions.impl.test"
         minSdkVersion 29
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+
+        consumerProguardFiles 'consumer-rules.pro'
     }
 
     buildTypes {
@@ -21,5 +22,7 @@ android {
 }
 
 dependencies {
-    project(":camerax-extensions")
+    implementation "androidx.annotation:annotation:1.1.0"
+
+    api project(":camera-common")
 }
